compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_as_lhs.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var ptr : ^int\n^ptr := 2\n"
---
"ptr"@(FileId(1), 4..7) [ConstVar(Var, No)]: pointer to int
"<root>"@(dummy) [Module(No)]: <error>

