compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_as_rhs.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var ptr : ^int\nvar j := ^ptr\n"
---
"ptr"@"src/main.t:4..7" [ConstVar(Var, No)]: pointer to int
"j"@"src/main.t:19..20" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
