compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_from_const_ptr.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const ptr : ^int\n^ptr := 2\n"
---
"ptr"@"src/main.t:6..9" [ConstVar(Const, No)]: pointer to int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
