compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_with_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ := ^()\n"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
