compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__equality_op_pointer_equal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Pointers\n    var b : ^int\n\n    % should all produce boolean\n    var _v_res : boolean\n\n    _v_res := b = b\n    "
---
"b"@"src/main.t:24..25" [ConstVar(Var, No)]: pointer to int
"_v_res"@"src/main.t:75..81" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
